--- a/frap_book.tex
+++ b/frap_book.tex
@@ -1302,7 +1302,7 @@ That is, when $p \in \Gamma$, we have $v(p) = \top$; and when $\neg p \in \Gamma
   Given context $\Gamma$ and formula $\phi$, if
   \begin{itemize}
   \item there is no variable $p$ such that both $p \in \Gamma$ and $\neg p \in \Gamma$, and
-  \item for any valuation $v$ compatible with $\Gamma$, we have $\denote{p}v$,
+  \item for any valuation $v$ compatible with $\Gamma$, we have $\denote{\phi}v$,
   \end{itemize}
   then $\Gamma \vdash \phi$.
 \end{lemma}
